--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,10 @@
-input {
+input, select {
     width: 100%;
+    height: 30px;
+    border: 1px solid #167EC0;
+    border-radius: 10px;
 }
-select {
-    width:100%;
-}
+
 .centered {
     /*position: absolute;
     top: 50%;
