--- a/Style.css
+++ b/Style.css
@@ -38,6 +38,13 @@ p {
     margin-bottom: 100px;
 }
 
+#formulario {
+    padding-right: 30px;
+}
+#mapa {
+    padding-left: 0px;
+}
+
 label {
     font-family: Work Sans;
     font-size: 16px;
@@ -68,12 +75,30 @@ input[type=submit] {
     font-family: Work Sans;
 }
 input[type=file] {
-    display: none;
+    border: none;
+    border-radius: none;
+    padding: 0px;
+}
+
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    margin: 115px 0px 60px 0px;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 }
 
 #link{
     margin: auto;
     min-width: 220px;
+    max-width: 220px;
 }
 #link img {
     width: 40px;
